--- a/overview/core-concepts-architecture/core-concepts-terminology.mdx
+++ b/overview/core-concepts-architecture/core-concepts-terminology.mdx
@@ -1,218 +1,161 @@
 ---
-title: "Core Concepts and Terminology"
-description: "Get up to speed on key terms and ideas: tests, test fixtures, test suites, assertions, parameterized tests, mocks, matchers, actions, and cardinalities. Understand the C++ idioms reflected in the framework’s design, with references to where these concepts are implemented."
+title: "Core Concepts & Terminology"
+description: "Learn the essential building blocks of GoogleTest, including test cases, fixtures, assertions, mocks, matchers, and parameterized tests. This page demystifies the vocabulary used in GoogleTest to help new users start writing and understanding tests quickly."
 ---
 
-# Core Concepts and Terminology
+# Core Concepts & Terminology
 
-## Introduction
-
-Understanding GoogleTest’s core concepts and terminology lays a solid foundation for writing effective tests and leveraging its full power. This page introduces key terms such as **tests**, **test fixtures**, **test suites**, **assertions**, **parameterized tests**, **mocks**, **matchers**, **actions**, and **cardinalities**. Additionally, you will get insight into the C++ idioms reflected in GoogleTest's design, with references to where these ideas are implemented.
-
-These concepts form the vocabulary and structural principles that guide your journey through test development, helping you write tests that are clear, maintainable, and robust.
+Discover the foundational elements that make up GoogleTest, the premier C++ testing framework. This page unpacks the essential vocabulary and concepts—test cases, fixtures, assertions, mocks, matchers, and parameterized tests—that empower you to write robust, effective tests quickly.
 
 ---
 
-## Key Concepts and Terminology
+## Understanding the Basics: What You Need to Know First
 
-### Tests
+Before you dive into writing tests, it's important to get familiar with the vocabulary that GoogleTest uses. Terminology in testing can sometimes be confusing due to varying definitions across frameworks and standards. GoogleTest clarifies these differences and aligns them with industry standards where possible.
 
-A **test** in GoogleTest is a function that verifies a particular behavior or outcome of your code. It is the atomic unit of verification and encapsulates an assertion or a group of assertions.
+### The Language of Testing in GoogleTest
 
-- Tests are defined using the `TEST(TestSuiteName, TestName)` macro.
-- Each test runs independently and reports success or failure.
+| Concept Description                                                            | GoogleTest Term    | ISTQB Term         |
+|-------------------------------------------------------------------------------|-------------------|--------------------|
+| A specific piece of code executed with particular inputs and verifications.    | `TEST()` (a Test)  | Test Case          |
+| A group of related tests bundled together to reflect the structure of the code | Test Suite (formerly Test Case) | Test Suite       |
 
-### Test Fixtures
+> **Tip:** GoogleTest has migrated from the term *Test Case* to *Test Suite* to better align with common testing language. The older *Test Case* APIs are deprecated.
 
-Often tests share common setup and teardown logic. GoogleTest provides **test fixtures** to encapsulate this shared context:
+---
 
-- A fixture is a C++ class deriving from `::testing::Test`.
-- It allows you to write `SetUp()` and `TearDown()` methods that run before and after each test in the fixture.
-- Tests that use a fixture are written with `TEST_F(FixtureName, TestName)`.
+## Core Building Blocks Explained
+
+### Assertions: The Heartbeat of Your Tests
+
+Assertions are your checkpoints. They verify whether conditions hold true during test execution.
+
+- **Success**: Condition met, test proceeds.
+- **Nonfatal Failure**: Condition failed, but test continues.
+- **Fatal Failure**: Condition failed, test stops immediately.
+
+You'll typically start testing by writing assertions using macros. For example:
+
+```cpp
+ASSERT_EQ(x.size(), y.size()) << "Vectors x and y are of unequal length";
+EXPECT_EQ(x[i], y[i]) << "Vectors x and y differ at index " << i;
+```
+
+The `ASSERT_*` macros abort the current function on failure, while `EXPECT_*` let the test continue logging more failures. Choose `EXPECT_*` when you want thorough feedback; use `ASSERT_*` when continuing doesn't make sense.
+
+### Tests: Encapsulating Assertions with Purpose
+
+Tests are simple functions defined with the `TEST()` macro that bundle assertions and execute the code under test.
 
 Example:
 
 ```cpp
-class MyTestFixture : public ::testing::Test {
- protected:
-  void SetUp() override {
-    // common init
-  }
+TEST(FactorialTest, HandlesZeroInput) {
+  EXPECT_EQ(Factorial(0), 1);
+}
 
-  void TearDown() override {
-    // common cleanup
-  }
-
-  // Shared members used by tests
-  int value_;
-};
-
-TEST_F(MyTestFixture, Test1) {
-  EXPECT_EQ(value_, 0);
+TEST(FactorialTest, HandlesPositiveInput) {
+  EXPECT_EQ(Factorial(3), 6);
+  EXPECT_EQ(Factorial(8), 40320);
 }
 ```
 
-### Test Suites
+GoogleTest runs each test individually, providing isolated environments to keep results independent and repeatable.
 
-A **test suite** is a grouping of related tests, defined by sharing the same first argument to `TEST` or `TEST_F`. It helps organize tests logically and manage test execution.
+### Test Suites: Organizing Tests Effectively
 
-### Assertions
+Tests belong to *test suites*—collections of tests that share context or test similar functionality. Grouping related tests makes your suite maintainable and mirrors your code's structure.
 
-Assertions verify expectations inside tests. They come in two flavors:
+- Use the same test suite name in `TEST()` calls to logically group tests.
+- GoogleTest executes tests by test suites, allowing you to focus runs on specific areas or all tests collectively.
 
-- **Fatal assertions** (e.g., `ASSERT_EQ()`) abort the current test if they fail.
-- **Non-fatal assertions** (e.g., `EXPECT_EQ()`) report a failure but allow the test to continue.
+### Test Fixtures: Sharing Setup Across Multiple Tests
 
-Assertions compare expected and actual values and provide informative messages on failure.
+When multiple tests operate on the same initial setup, *test fixtures* help avoid redundant code and maintain consistency.
+
+How to use fixtures:
+
+1. Create a class derived from `testing::Test`.
+2. Place shared objects and setup code in the fixture.
+3. Use `TEST_F()` instead of `TEST()`, specifying the fixture class name.
+
+Example:
+
+```cpp
+class QueueTest : public testing::Test {
+ protected:
+  QueueTest() {
+    q1_.Enqueue(1);
+    q2_.Enqueue(2);
+    q2_.Enqueue(3);
+  }
+
+  Queue<int> q0_;
+  Queue<int> q1_;
+  Queue<int> q2_;
+};
+
+TEST_F(QueueTest, IsEmptyInitially) {
+  EXPECT_EQ(q0_.size(), 0);
+}
+
+TEST_F(QueueTest, DequeueWorks) {
+  int* n = q1_.Dequeue();
+  ASSERT_NE(n, nullptr);
+  EXPECT_EQ(*n, 1);
+  delete n;
+}
+```
+
+Each test uses a fresh fixture instance, ensuring test isolation and preventing side effects between tests.
+
+---
+
+## Expanding Your Testing Vocabulary
+
+### Mocks and Matchers
+
+Mocks simulate behavior of dependencies and provide controlled environments in your tests. Matchers simplify checking complex values and conditions, enhancing readability and expressiveness.
 
 ### Parameterized Tests
 
-**Parameterized tests** let you run the same test logic with multiple inputs. This avoids duplication and improves test coverage.
+To test scenarios with varying inputs or types without duplicating code, GoogleTest offers:
 
-- Use `TEST_P` and `INSTANTIATE_TEST_SUITE_P` macros.
-- Parameters are passed to the test fixture.
+- **Value-Parameterized Tests** for varying input data.
+- **Typed Tests** to repeat tests across types.
 
-Example:
-
-```cpp
-class MyParamTest : public ::testing::TestWithParam<int> {};
-
-TEST_P(MyParamTest, IsEven) {
-  int n = GetParam();
-  EXPECT_EQ(n % 2, 0);
-}
-
-INSTANTIATE_TEST_SUITE_P(EvenNumbers, MyParamTest,
-                         ::testing::Values(2, 4, 6, 8));
-```
-
-### Mocks
-
-Mocks are objects that simulate the behavior of real objects in a controlled way.
-
-- GoogleMock (gMock) is integrated with GoogleTest to provide a powerful mocking framework.
-- A **mock class** implements an interface or base class to intercept method calls.
-- You specify expectations on method calls and actions (what the mock should do).
-
-Example of creating a simple mock:
-
-```cpp
-class Foo {
- public:
-  virtual ~Foo() {}
-  virtual int GetValue() = 0;
-};
-
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD(int, GetValue, (), (override));
-};
-```
-
-### Matchers
-
-Matchers define argument conditions for mock method calls. They are predicates that test if arguments fulfill certain criteria.
-
-Common matchers include `_` (wildcard, matches anything), `Eq(val)`, `Ge(val)`, `NotNull()`, and many more.
-
-Example:
-
-```cpp
-EXPECT_CALL(mock_foo, GetValue())
-    .WillOnce(Return(42));
-EXPECT_CALL(mock_foo, DoSomething(Ge(5)));
-```
-
-### Actions
-
-Actions specify what a mock method does when called:
-
-- Return values (`Return(...)`)
-- Invoking custom functions (`Invoke(...)`)
-- Setting output arguments (`SetArgPointee<N>(value)`)
-- Doing multiple things (`DoAll(...)`)
-
-Example:
-
-```cpp
-EXPECT_CALL(mock_foo, GetValue())
-    .WillOnce(Return(10))
-    .WillRepeatedly(Return(20));
-```
-
-### Cardinalities
-
-Cardinalities specify how many times you expect a mock method to be called:
-
-- `Times(n)` - exactly n times
-- `AtLeast(n)` - minimum n times
-- `AtMost(n)` - maximum n times
-- `AnyNumber()` - any number of times
-
-Example:
-
-```cpp
-EXPECT_CALL(mock_foo, DoSomething())
-    .Times(AtLeast(1));
-```
+You define a test logic template and provide different inputs or types. This dramatically scales test coverage while keeping tests concise.
 
 ---
 
-## C++ Idioms Reflected in GoogleTest
+## Why Mastering Terminology Matters
 
-GoogleTest and GoogleMock leverage modern C++ idioms to provide expressive and safe APIs.
+Getting comfortable with GoogleTest’s core concepts empowers you to:
 
-- **Templates and Polymorphism:** Mocking is implemented via class templates that accept mock classes and enhance their behavior.
-- **RAII (Resource Acquisition Is Initialization):** Test setups and teardowns use destructors and constructors to manage resources.
-- **Move Semantics:** GoogleMock supports mocking methods that take or return move-only types (e.g., `std::unique_ptr`).
-- **Variadic Templates:** Used to handle methods with arbitrary argument lists.
+- Write clearer, maintainable tests.
+- Use advanced features like fixtures, parameterized tests, and mocking wisely.
+- Debug failing tests faster with meaningful assertions and organization.
 
-For example, `NiceMock<T>`, `NaggyMock<T>`, and `StrictMock<T>` are template wrappers that modify the behavior of mock objects regarding uninteresting calls.
-
-See [googlemock/include/gmock/gmock-nice-strict.h](https://github.com/google/googletest/blob/main/googlemock/include/gmock/gmock-nice-strict.h) for their implementation.
+Understanding these foundations accelerates your journey from writing one-off tests to building extensive, reliable test suites that support your development lifecycle.
 
 ---
 
-## How These Concepts Fit Together
+## Practical Tips & Common Pitfalls
 
-The core concepts combine to form workflows in your tests:
-
-1. **Define mocks** for your dependencies using `MOCK_METHOD` macros.
-2. **Set expectations** on mocks with matchers and cardinalities.
-3. **Specify behavior** of mocked methods using actions.
-4. **Write tests** to exercise your code using test fixtures and parameterized tests.
-5. **Run tests** to check correctness and catch interaction errors.
-
-By mastering these concepts, you build tests that not only validate code but also document its expected interactions and behaviors clearly.
+- **Avoid underscore (`_`) in test suite and test names.** This prevents internal name clashes and compiler errors.
+- **Choose your assertions carefully:** Prefer `EXPECT_*` macros to catch multiple errors per test; use `ASSERT_*` when subsequent test code depends on the assertion passing.
+- **Remember:** Each test runs with a fresh fixture instance; mutable state is not shared across tests.
+- **Define `SetUp()` and `TearDown()` in fixtures correctly:** spelling mistakes (`Setup()` instead of `SetUp()`) will silently break setup calls.
+- **Use parameterized tests to avoid duplication:** They offer scalable testing without code repetition.
 
 ---
 
-## Practical Tips and Best Practices
+## Next Steps: Start Writing Tests
 
-- Always declare destructors **virtual** in base classes you mock to avoid undefined behavior and leaks.
-- Prefer to use **test fixtures** for shared setup to avoid duplication and improve readability.
-- Use **parameterized tests** to cover multiple inputs efficiently.
-- Use **NiceMock** to suppress warnings for uninteresting calls during test development, but rely on strict or naggy mocks to catch unexpected interactions in final tests.
-- Define only necessary expectations to avoid brittle tests; use `ON_CALL` for default behaviors.
-- Use descriptive names for tests and expectations; it makes failure messages more actionable.
+With these fundamental concepts in your toolkit, you're ready to write your first test programs.
 
----
+- Explore [GoogleTest Primer](primer.md) to see these concepts in action.
+- Review the [Assertions Reference](reference/assertions.md) for all macros to validate behavior.
+- Experiment with fixtures and parameterized tests to achieve better test structure and coverage.
 
-## Troubleshooting Common Issues
-
-- If a mocked method calls the real implementation, verify it is declared `virtual`.
-- Avoid ambiguities with overloaded methods by specifying matchers explicitly or using `Const()` wrapper.
-- Remember `EXPECT_CALL` must be set **before** the mock method is invoked.
-- If you receive warnings about 'uninteresting calls', consider whether you need to set expectations or use `NiceMock`.
-
----
-
-## References and Further Reading
-
-- [gMock Cheat Sheet](../docs/gmock_cheat_sheet.md) - Quick reference guide for mocks, matchers, actions, and cardinalities.
-- [gMock Cookbook](../docs/gmock_cook_book.md) - Recipes for common mocking patterns and advanced usage.
-- [gMock for Dummies](../docs/gmock_for_dummies.md) - Beginner’s guide to mocking.
-- [Mocking Reference](../docs/reference/mocking.md) - Detailed API reference.
-- [Controlling Mock Strictness](../api-reference/mocking-and-matcher-api/nice-naggy-strict-mock-api.md) - Learn about NiceMock, NaggyMock, and StrictMock wrapper types.
-
----
+Your testing journey begins with mastering these core concepts—GoogleTest’s power unfolds once you do.
