--- a/overview/core-concepts-architecture/architecture-diagram.mdx
+++ b/overview/core-concepts-architecture/architecture-diagram.mdx
@@ -1,156 +1,165 @@
 ---
-title: "How GoogleTest Works (Architecture Diagram)"
-description: "Visualize the main components of GoogleTest and their relationships: test discovery, fixtures, assertions, result reporting, and the optional GoogleMock integration layer. A mermaid diagram illustrates the data flow and the role of key files."
+title: "Architecture Overview (with Diagram)"
+description: "A visual, mermaid-rendered diagram depicting the high-level architecture of GoogleTest and GoogleMock. See how tests are discovered, run, and reported; how the assertion and mocking engines work; and the interaction between key components."
 ---
 
-# How GoogleTest Works (Architecture Diagram)
+# Architecture Overview (with Diagram)
 
-## Visualizing the Core Architecture
+## Visualizing the High-Level Architecture of GoogleTest and GoogleMock
 
-This page provides a clear visualization of the main components within GoogleTest and their interplay. It maps out key elements such as test discovery, fixtures, assertions, result reporting, and how GoogleMock integrates optionally, helping you understand the flow and responsibilities of each part.
-
----
-
-## What You Will Learn Here
-
-- How GoogleTest discovers and organizes test cases.
-- The role and lifecycle of test fixtures.
-- How assertions are evaluated and propagated.
-- How test results are collected and reported.
-- The optional integration and layering of GoogleMock for mocking within tests.
-- An architectural diagram that illustrates data flow and key files.
+Understanding how GoogleTest and GoogleMock operate beneath the surface enables you to utilize these tools more effectively and troubleshoot with confidence. This page presents a comprehensive, mermaid-rendered diagram that captures the core components of GoogleTest and GoogleMock, revealing how tests are discovered, executed, and reported, alongside how key internal engines such as assertion and mocking interact.
 
 ---
 
-## Understanding GoogleTest's Architecture
+## Why This Architecture Matters to You
 
-At its core, GoogleTest structures the testing process as a clear flow from test discovery to execution and reporting:
-
-1. **Test Discovery:** GoogleTest automatically locates test cases within your codebase by scanning for tests defined with its macros (`TEST` and `TEST_F`).
-
-2. **Test Fixtures:** These set up and tear down the environment needed for tests, ensuring isolated and repeatable test scenarios.
-
-3. **Assertions:** Assertions validate conditions within your tests. When an assertion fails, GoogleTest captures the failure and controls test flow accordingly.
-
-4. **Result Reporting:** After running tests, GoogleTest collects results and outputs detailed reports, enabling efficient debugging and verification.
-
-5. **GoogleMock Integration:** Optional mocking support is layered on top of the architecture, allowing you to create mock objects, specify expectations, and verify interactions in your unit tests seamlessly.
-
-This modular breakdown helps simplify test management while providing powerful capabilities.
+Whether you are writing your first test or managing a large testing suite, grasping the architecture is invaluable. It helps you understand the flow of control during test execution, what happens when assertions are evaluated, and how mocks verify your code behavior. Visualizing these elements clarifies many underlying behaviors that might otherwise seem mysterious, like test order, failure reporting, and mock verification.
 
 ---
 
-## Architecture Diagram
+## Overview of GoogleTest and GoogleMock Architecture
+
+GoogleTest is a unified framework that automates test discovery, running, and results reporting based on standardized test cases and assertions. GoogleMock complements this by providing a powerful mocking engine that enables interaction-based testing with declaratively defined mock objects and behavior expectations.
+
+At a high level, the architecture consists of:
+
+- **Test Discovery Module:** Detects test cases and suites during runtime.
+- **Test Execution Engine:** Orchestrates running each test, managing fixtures and lifecycle events.
+- **Assertion Engine:** Handles evaluation of test validity checks, recording pass/fail status.
+- **Mocking Engine:** Provides facilities for creating mocks, setting expectations, and verifying interactions.
+- **Reporting System:** Gathers test results and outputs detailed feedback to the user.
+
+Throughout the test lifetime, these components collaborate seamlessly to provide the fast, reliable, and expressive testing experience you depend on.
+
+---
+
+## Architecture Flow Breakdown
+
+### 1. Test Discovery & Registration
+
+Your compilation units include test definitions using GoogleTest macros like `TEST()` and `TEST_F()`. These register their test cases during static initialization. GoogleTest collects these registrations into a global repository enabling automatic discovery.
+
+### 2. Test Execution
+
+When you run your test binary, GoogleTest's main event loop executes each registered test in sequence, optionally filtering tests based on command-line parameters. For each test:
+
+- Setup occurs using test fixtures, if any.
+- The test case method runs.
+- Assertions are evaluated dynamically.
+- Tear-down procedures clean up after the test.
+
+### 3. Assertion Handling
+
+Assertions are proactively checked. On failure, the assertion engine immediately reports errors with detailed diagnostic data and halts the current test, enabling early feedback.
+
+### 4. Mocking Behavior
+
+GoogleMock extends this by enabling mock classes to intercept method calls and verify expectations on these calls. When mocks are used:
+
+- Mock objects monitor interactions.
+- GoogleMock checks if method calls match defined expectations including arguments, call count, and order.
+- Violations of expectations cause test failures with precise messages.
+
+### 5. Test Result Reporting
+
+At each test’s conclusion, results including success, failure, and skipped tests accumulate and are reported comprehensively. This final summary helps you quickly identify and address issues.
+
+---
+
+## Mermaid Diagram: GoogleTest & GoogleMock High-Level Architecture
 
 ```mermaid
 flowchart TD
-  %% Core Components
-  TestDiscovery["Test Discovery (TEST, TEST_F)"]
-  FixtureSetup["Test Fixtures (Setup & Teardown)"]
-  TestExecution["Test Execution Engine"]
-  Assertions["Assertions & Failure Handling"]
-  ResultCollection["Test Result Collection & Reporting"]
-
-  %% Optional Layer
-  GoogleMockLayer["GoogleMock Integration Layer"]
-
-  %% Key Files Indication
-  KeyFiles["Key Source Files: gtest.h, gtest.cc, gmock.h, gmock.cc"]
-
-  %% Relationships
-  TestDiscovery --> FixtureSetup
-  FixtureSetup --> TestExecution
-  TestExecution --> Assertions
-  Assertions --> ResultCollection
-  GoogleMockLayer -.-> TestExecution
-  GoogleMockLayer -.-> Assertions
-
-  %% Labels
-  classDef optional fill:#f9f,stroke:#333,stroke-dasharray: 5 5;
-  class GoogleMockLayer optional;
-
-  %% Grouping
-  subgraph GoogleTest Core
-    TestDiscovery
-    FixtureSetup
-    TestExecution
-    Assertions
-    ResultCollection
+  subgraph Test Discovery & Registration
+    MTestDefs["Test Definitions (TEST, TEST_F macros)"] --> Reg["Test Registration"]
+    Reg --> GlobalRepo["Global Test Repository"]
   end
 
-  subgraph "Key Code Files"
-    KeyFiles
+  subgraph Test Execution Engine
+    StartTest(["Start Test Run"])
+    GlobalRepo --> StartTest
+    StartTest --> Iteration["Iterate over Registered Tests"]
+    Iteration --> Setup["Test Fixture Setup"]
+    Setup --> RunTest["Execute Test Case"]
+    RunTest --> AssertionCheck["Evaluate Assertions"]
+    AssertionCheck -->|Passed| TearDown["Fixture Tear-Down"]
+    AssertionCheck -->|Failed| ReportFailure["Record & Report Failure"]
+    TearDown --> NextTest["Proceed to Next Test"]
+    ReportFailure --> NextTest
+    NextTest --> Iteration
   end
 
+  subgraph Assertion Engine
+    AssertionCheck --> Eval["Assertion Evaluation"]
+    Eval --> Feedback["Diagnostic Feedback & Error Reporting"]
+    Feedback --> AssertionCheck
+  end
+
+  subgraph Mocking Engine
+    RunTest --> MockObjs["Mock Objects & Method Interception"]
+    MockObjs --> ExpectCheck["Check Expectations & Call Counts"]
+    ExpectCheck -->|Match| RunTest
+    ExpectCheck -->|Mismatch| MockFail["Mock Expectation Failure"]
+    MockFail --> ReportFailure
+  end
+
+  subgraph Reporting System
+    ReportFailure --> Summary["Test Run Summary & Results"]
+    NextTest --> Summary
+  end
+
+  classDef mainfill fill:#D6EAF8,stroke:#1B4F72,stroke-width:1.5px;
+  class TestExecutionEngine mainfill
+
+  class Setup,RunTest,TearDown,Iteration,StartTest mainfill
+
+  click MTestDefs "googletest/README.md" "View Test Macro Definitions"
+  click MockObjs "googlemock/README.md" "Learn More About GoogleMock"
 ```
 
 ---
 
-## How to Interpret This Diagram
+## Practical Insights
 
-- **Sequential Flow:** Testing begins with discovering your tests, followed by setting up fixtures.
-
-- **Execution and Assertion:** Each test runs, performing assertions that validate code behavior.
-
-- **Reporting:** After execution, results are accumulated and presented clearly for analysis.
-
-- **Mocking Layer:** GoogleMock sits optionally on top, allowing detailed control and verification of interactions in your tests without disturbing the core test flow.
-
-- **Key Source Files:** The core implementation resides mainly in the `gtest` and `gmock` headers and source files.
+- **You don't need to manually register tests:** GoogleTest handles discovery by simply using the macros in your source code.
+- **Tests run independently:** Each test runs with its own setup and teardown, avoiding state leaks and ensuring test isolation.
+- **Mock expectations guide test validation:** When mocks are involved, method invocation sequences and argument values become part of the contract tested.
+- **Failures trigger immediate feedback:** Both assertion and mock failures instantly report detailed information to help diagnose issues.
 
 ---
 
-## Practical Example: Running a Test Suite
+## Tips for Successful Testing with GoogleTest & GoogleMock Architecture
 
-Imagine you have a set of unit tests for a class `Calculator`. Here's what happens under the hood:
-
-- GoogleTest locates all your defined tests via `TEST` macros.
-- For any test that uses a fixture (`TEST_F`), it automatically calls the fixture setup code.
-- The test runs and assertions check the returned results from your code.
-- If any assertion fails, GoogleTest captures it and continues or aborts based on failure severity.
-- Results from every test are collected.
-- Finally, GoogleTest outputs a summary and detailed report.
-- If you use mocks, GoogleMock verifies expected interactions during execution.
-
----
-
-## Best Practices & Tips
-
-- **Design Tests with Fixtures:** Use fixtures (`TEST_F`) to reduce duplication and manage test setup and cleanup precisely.
-- **Leverage Assertions Wisely:** Choose the right assertion macros to express your expectations clearly.
-- **Use GoogleMock for Dependencies:** When your tests depend on external components or complex behavior, integrate GoogleMock to simulate and verify interactions.
-- **Monitor Test Reports:** Regularly review GoogleTest's detailed reports to quickly identify failures and unexpected behaviors.
-
----
-
-## Troubleshooting
-
-- **Test Discovery Not Working:** Ensure you have properly defined tests with `TEST` or `TEST_F` macros.
-- **Fixture Setup Not Running:** Confirm that your test uses the fixture syntax `TEST_F` and that the setup methods are correctly overridden.
-- **Unexpected Assertion Failures:** Check the test logic and ensure assertions match expected conditions.
-- **GoogleMock Expectations Not Met:** Make sure `EXPECT_CALL` statements precede code execution and that your mocks are correctly configured.
+- Organize your tests clearly using test suites and fixtures for reusable setup.
+- Use mocks when you need to isolate your component and verify interaction patterns explicitly.
+- Be mindful of the order and cardinality of expectations in mocks — improper ordering can lead to unexpected failures.
+- Leverage GoogleTest’s filtering and reporting flags to focus your test runs and streamline debugging.
 
 ---
 
 ## Next Steps
 
-After understanding how GoogleTest works and its architecture:
+Understanding this architecture lays the foundation for diving deeper into specific topics:
 
-- Explore the **[Fundamental Concepts & Terminology](../core-concepts-architecture/core-terminology)** page to deepen your knowledge of core testing principles.
-- Learn about **[Platform Support, Integrations & Dependencies](../core-concepts-architecture/integration-dependencies)** for adapting GoogleTest to your environment.
-- Dive into **[Writing Your First Test Case](../../getting-started/first-test-experience/writing-your-first-test)** to see practical usage.
-
----
-
-## Additional Resources
-
-- [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md) — A comprehensive starting point.
-- [GoogleMock Cookbook](https://github.com/google/googletest/blob/main/docs/gmock_cook_book.md) — Practical recipes to get the most from GoogleMock.
-- [API Reference for Core Testing](../../api-reference/core-testing-apis) — Detailed specs of GoogleTest APIs.
+- Explore the [Core Concepts & Terminology](/overview/core-concepts-architecture/core-concepts-terminology) page to familiarize yourself with fundamental GoogleTest concepts like test cases, fixtures, assertions, and mocks.
+- Try your hand at writing and running tests using the [Getting Started Guides](/getting-started).
+- Learn how to create and control mocks with detailed examples in the [GoogleMock Documentation](https://google.github.io/googletest/gmock_for_dummies.html).
 
 ---
 
-Understanding the architecture helps you use GoogleTest and GoogleMock effectively, build reliable test suites, and improve code quality with confidence.
-
+Embracing this architecture insightfully empowers you to write robust, expressive tests that scale easily with your projects.
 
 ---
+
+## References
+
+- [GoogleTest GitHub Repository](https://github.com/google/googletest)
+- [GoogleMock Documentation](https://google.github.io/googletest/gmock_for_dummies.html)
+- Related Documentation Pages:
+  - [What Is GoogleTest?](/overview/introduction-and-value/what-is-googletest)
+  - [Core Concepts & Terminology](/overview/core-concepts-architecture/core-concepts-terminology)
+  - [Target Audience & Primary Use Cases](/overview/introduction-and-value/target-audience-use-cases)
+
+---
+
+*This overview captures the essence and flow of GoogleTest and GoogleMock to enhance your understanding, enabling you to leverage their powerful functionality confidently and effectively.*
